l10n: code_is_required

--- a/assets/translations/app_fr.arb
+++ b/assets/translations/app_fr.arb
@@ -1,4 +1,5 @@
 {
-    "@@author": "Ibrahima Sylla",
-    "@@locale": "fr"
+  "@@author": "Ibrahima Sylla",
+  "@@locale": "fr",
+  "code_is_required": "Votre code secret est requis pour dévérouiller"
 }
