--- a/assets/translations/app_fr.arb
+++ b/assets/translations/app_fr.arb
@@ -1,5 +1,6 @@
 {
   "@@author": "Ibrahima Sylla",
   "@@locale": "fr",
-  "code_is_required": "Votre code secret est requis pour dévérouiller"
+  "code_is_required": "Votre code secret est requis pour dévérouiller",
+  "forgot_password": "oublié?"
 }
