add searchbutton and fill remainning space in surface color

--- a/assets/translations/app_fr.arb
+++ b/assets/translations/app_fr.arb
@@ -8,5 +8,6 @@
   "payment": "Paiements",
   "credit": "Crédit",
   "bank": "Banque",
-  "gifts": "Cadeaux"
+  "gifts": "Cadeaux",
+  "search": "Rechercher"
 }
