--- a/assets/translations/app_fr.arb
+++ b/assets/translations/app_fr.arb
@@ -24,5 +24,6 @@
   "disconnect": "Se déconnecter",
   "open_until_10": "Ouvert jusqu'à 22H",
   "scan_code": "Scanner un code",
-  "my_card": "Ma carte"
+  "my_card": "Ma carte",
+  "scan_for_pay": "Scanner le Code QR pour payer ou envoyer"
 }
