--- a/assets/translations/app_fr.arb
+++ b/assets/translations/app_fr.arb
@@ -35,5 +35,8 @@
   "fees_max": "Frais maximum: 5000F",
   "send_money": "Envoyer de l'argent",
   "add_new_phone_number": "Saisir un nouveau numéro",
-  "scan_for_send": "Scanner pour envoyer"
+  "scan_for_send": "Scanner pour envoyer",
+  "transactions": "Transactions",
+  "transfers": "Transferts",
+  "invoices": "Factures"
 }
