payment form screen

--- a/assets/translations/app_fr.arb
+++ b/assets/translations/app_fr.arb
@@ -56,5 +56,9 @@
   "search_by_name": "Rechercher par nom",
   "restoration": "Restauration",
   "shopping": "Shopping",
-  "tourism": "Tourisme"
+  "tourism": "Tourisme",
+  "favorites": "Favoris",
+  "food": "Restaurants",
+  "pay": "Payer",
+  "amount": "Montant"
 }
