payment category filter

--- a/assets/translations/app_fr.arb
+++ b/assets/translations/app_fr.arb
@@ -60,5 +60,6 @@
   "favorites": "Favoris",
   "food": "Restaurants",
   "pay": "Payer",
-  "amount": "Montant"
+  "amount": "Montant",
+  "cancel": "Annuler"
 }
